# mosaic

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
doc/: mosaic_sdk_usage.md
doc/theme-system/: ACRYLIC_ENHANCEMENT_V3.md  BACKGROUND_V2_CHANGELOG.md  FINAL_DESIGN.md  QUICK_START.md  README.md  THEME_SYSTEM_DESIGN.md  V3_IMPLEMENTATION_STATUS.md  VISUAL_COMPARISON.md  demo-acrylic-enhanced.html  demo-final.html
docs/: crash-recovery.md  index.md  project-understanding-and-tasks.md  questions_pending.md
docs/architecture/: cc-node-event-integration.md  concepts-glossary.md  crash-recovery.md  event-system-spec.md  event-system.md  module-design.md  session-routing-mechanism.md  system-overview.md
docs/implementation/: phase-1-core.md  phase-2-daemon.md  phase-3-cc-node.md
docs/modules/core/: overview.md
docs/modules/daemon/: overview.md
docs/modules/nodes/: cc-agent.md  others.md
docs/modules/transport/: overview.md
docs/requirements/: functional-requirements.md  non-functional-requirements.md
docs/user-guide/: core-concepts.md
docs_draft/: module-architecture.md
docs_draft/architecture/: daemon-process.md  event-type-specification.md  node-runtime-process.md
docs_draft/reference/: glossary.md
docs_draft/user-guide/: cli-reference.md
frontend/: next.config.ts  package-lock.json  package.json
frontend-v2/: package-lock.json  package.json
frontend-v2/src/app/: globals.css  layout.tsx  page.tsx
frontend-v2/src/components/: auth-guard.tsx  custom-edge.tsx  message-item.tsx  navbar.tsx  session-view-dialog.tsx  sidebar.tsx  theme-switcher.tsx
frontend-v2/src/contexts/: auth-context.tsx  theme-context.tsx  websocket-context.tsx
frontend-v2/src/hooks/: use-voice-input.ts
frontend-v2/src/lib/: api.ts  error-messages.ts  layout.ts  request.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CustomEdge.tsx  FilePreview.tsx  WorkspaceExplorer.tsx  auth-guard.tsx  navbar.tsx  sidebar.tsx  theme-provider.tsx  theme-toggle.tsx  websocket-provider.tsx
frontend/src/hooks/: use-dialog.ts  use-toast.ts
src/mosaic/cli/: base.py  main.py
src/mosaic/cli_bak/: main.py
src/mosaic/core/: __init__.py  catalog.py  client.py  daemon.py  db.py  event.py  events.py  exceptions.py  interfaces.py  meta.py  models.py  node.py  repository.py  server.py  transport.py  type.py  types.py  util.py  zmq.py
src/mosaic/core_bak/: catalog.py  repository.py  transport.py
src/mosaic/nodes/: aggregator.py  dummy.py  email.py  reddit_scraper.py  scheduler.py
src/mosaic/refactor/: __init__.py
src/mosaic/runtime/: __init__.py  admin.py  client.py  context.py  event_router.py  inbox.py  outbox.py  waiter.py
src/mosaic/storage/: __init__.py  database.py  schema.py
(+325 files in other folders)
