[project]
name = "mosaic"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "claude-agent-sdk>=0.1.9",
    "click>=8.3.1",
    "fastmcp>=2.13.3",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[project.scripts]
mosaic = "mosaic.cli.main:mosaic"
