[project]
name = "mosaic"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.1",
    "bcrypt>=3.2.0,<4.0.0",
    "claude-agent-sdk>=0.1.9",
    "click>=8.3.1",
    "dashscope>=1.25.7",
    "email-threads",
    "fastapi>=0.124.4",
    "fastmcp>=2.13.3",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.0",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.6.0",
    "pyexecjs>=1.5.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "pyzmq>=27.1.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sqlmodel>=0.0.22",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "twikit>=2.3.3",
    "uvicorn>=0.38.0",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[tool.uv.sources]
email-threads = { git = "https://github.com/renjiyun06/email-threads.git" }

[project.scripts]
mosaic = "mosaic.v2.cli.main:main"
mosaic_old = "mosaic.cli.main:mosaic"
